category pages + minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username:  ealfox
-
+mastodon:
+- instance: mastodon.online
+  username: ealfox
 # Build settings
 markdown: kramdown
 theme: minima
